--- a/前端/前端说明文件.md
+++ b/前端/前端说明文件.md
@@ -2,3 +2,5 @@
         npm run dev // 开发环境
         npm run test // 测试环境
         npm run build // 正式环境打包
+注：运行命令需要打开student_ms文件夹下的终端  使用命令npm run dev
+前端中的model需要自行安装
